<resources>
    <string name="app_name" translatable="false">UT</string>
    <string name="wrap_app_name" translatable="false">Universal\nTunnel</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Universal Tunnel</string>
    <string name="nav_header_subtitle" translatable="false">universal@tunnel.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_change_character">Change character</string>

    <string name="menu_home">Home</string>
    <string name="menu_health">Health</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_media">Media</string>
    <string name="menu_note">Note</string>

    <string name="title_activity_user" translatable="false">UserActivity</string>
    <string name="choose_character">Choose a character</string>

    <string name="hulk">Bruce Banner</string>
    <string name="iron_man">Tony Stark</string>
    <string name="captain_america">Steve Rogers</string>
    <string name="ant_man">Scott Lang</string>

    <string name="network_status_online">Network status - Online</string>
    <string name="network_status_offline">Network status - Offline</string>

    <string name="please_choose_character">Please choose a character</string>
    <string name="ready_to_go">Ready To Go</string>
    <string name="choose_character_again">Choose character again?</string>

    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>

    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="add_note">Add Note</string>
    <string name="discard_empty_note">Discard empty note!</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_ut_channel</string>
    <string name="default_notification_channel_name" translatable="false">Ut</string>
    <string name="msg_subscribed" translatable="false">Subscribed to Ut topic</string>
    <string name="msg_subscribe_failed" translatable="false">Failed to subscribe to Ut topic</string>

    <string name="title_activity_exoplayer" translatable="false">ExoPlayerActivity</string>
    <string name="exoplayer" translatable="false">ExoPlayer</string>
    <string name="media_url_dash" translatable="false"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
</resources>