<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_baseline_watch_24"
            android:title="@string/menu_device" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/menu_finance" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/menu_media" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_baseline_note_alt_24"
            android:title="@string/menu_note" />
    </group>
</menu>